fix(stats): ✨ add validation for Network Module Build Team connection on enable
Fixes #34.